--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 	padding:0;
 	margin:0;
 	box-sizing: border-box;
+	color: #808080;
 }
 a {
 	color: black;
@@ -23,8 +24,8 @@ a {
 }
 p { color: #808080; }
 .navbar a {
+	text-color: #808080;
 	text-decoration: none;
-	color: #d8d8d8;
 	font-size: 24;
 }
 .navbar a.nav-logo {
@@ -36,7 +37,6 @@ p { color: #808080; }
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	font-family: 'Arial', sans-serif;
-	color: #d8d8d8;
 	font-weight: bold;
 
 }
@@ -61,13 +61,14 @@ body {
 }
 .content {
 	font-family: 'Arial', sans-serif;
-	color: #d8d8d8;
 	margin-top: 150px;
 	margin-left: 60px;
 	position: relative;
 }
 .photos {
-	margin-top:  160px;
+	margin-top:  140px;
+	position:  relative;
+	width: 300px;
 }
 h1 {
 	font-size: 70px;
@@ -75,7 +76,8 @@ h1 {
 }
 
 h3 {
-	color: #d8d8d8;
+}
+title {
 }
 p {
 	margin-top: 10px;
@@ -103,7 +105,6 @@ img {
 	margin: 50px;
 	position: relative;
 	width: 300px;
-	transition: 1s;
 }
 @media screen and (max-width: 600px) {
   * {
